fix small style glitches on mobile

--- a/themes/ziglang-original/assets/css/style.css
+++ b/themes/ziglang-original/assets/css/style.css
@@ -314,13 +314,10 @@ h1:lang(ja), h2:lang(ja), h3:lang(ja), h4:lang(ja) {
 
   #header-image {
     background-image: url(/www.ziglang.org/zig-logo-light.svg);
+    margin: 10px 0;
   }
 
 }
-
-
-
-/*New Stuff*/
 
 @media only screen and (max-width: 600px) {
   table {
@@ -328,8 +325,9 @@ h1:lang(ja), h2:lang(ja), h3:lang(ja), h4:lang(ja) {
     overflow: auto;
   }
 
-  body {
-    padding: 1rem;
+  .container {
+    padding-right: 1rem !important;
+    padding-left: 1rem !important;
   }
 
   ul {
